[project]
name = "pixeltable-doctools"
version = "0.1.0"
description = "Documentation generation tools for Pixeltable SDK and LLM-optimized docs"
authors = [{ name = "Pixeltable, Inc.", email = "contact@pixeltable.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "docstring-parser>=0.11",
    "pypandoc>=1.15",
    "nbformat>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.3",
]

[project.scripts]
mintlifier = "doctools.mintlifier.mintlifier:main"
llmdocs = "doctools.llmdocs.llmdocs:main"
deploy-docs-local = "doctools.build_mintlify.build_mintlify:main"
deploy-docs-stage = "doctools.deploy.deploy_docs_stage:main"
deploy-docs-prod = "doctools.deploy.deploy_docs_prod:main"
convert-notebooks = "doctools.convert_notebooks.convert_notebooks:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doctools"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "SIM"]
ignore = ["E501"]  # Line length handled by formatter
